--- a/Exercici1Array.html
+++ b/Exercici1Array.html
@@ -6,8 +6,8 @@
     <title>Array</title>
     <script src="Exercici1Array.js"></script>
     <style>
-        body {
-            font-family: Arial; color: black; text-decoration: none; text-transform: none;
+        p {
+            font-size: 15px;
         }
     </style>
 </head>
